--- a/.github/workflows/style_type_checks.yml
+++ b/.github/workflows/style_type_checks.yml
@@ -12,5 +12,7 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+    - name: Install dependencies
+      run: pip install click
     - name: Check license headers
       run: python .devtools/license.py check .
