Update path to runtool for dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,6 @@ version: 2
 updates:
   # Enable version updates for pip (Python)
   - package-ecosystem: "pip"
-    directory: "/"
+    directory: "/runtool"
     schedule:
       interval: "weekly"
